# mkdocs-obsidian-bridge

./: .editorconfig  .gitignore  .justfile  README.md  REUSE.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-deploy.yml  build-test.yml  chore-reuse-lint.yml
mkdocs_obsidian_bridge/: __init__.py  plugin.py
mkdocs_obsidian_bridge_plugin/: plugin.py
tests/: __init__.py  test_e2e.py
tests/example/: mkdocs.yml
tests/example/docs/: Images.md  Links.md  Non-Working.md  Weird Links.md  index.md
tests/example/docs/Notes/2024/: Books.md  Games.md
tests/example/docs/Notes/2025/: Books.md  Sport.md  index.md
tests/example/docs/foo/bar/: One.md  README.md  Three.md  Two.md
tests/example/docs/foo/buzz/: Another Page.md  One.md  index.md
tests/example/docs/stylesheets/: extra.css
