[tool.poetry]
name = "mkdocs-obsidian-bridge"
version = "1.0.0"
description = "An MkDocs plugin that helps exporting your Obsidian vault as an MkDocs site."
authors = ["GooRoo <sergey.olendarenko@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "mkdocs_obsidian_bridge"}]

[tool.poetry.plugins."mkdocs.plugins"]
obsidian-bridge = "mkdocs_obsidian_bridge.plugin:ObsidianBridgePlugin"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
markdown = ">=3.2.1,<3.4"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pylama = {extras = ["pylint", "toml"], version = "^8.4.1"}
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylama]
max_line_length = 120

[tool.yapf]
blank_line_before_nested_class_or_def = false
blank_lines_between_top_level_imports_and_variables = 2
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
spaces_around_power_operator = true
spaces_before_comment = 2
