# SPDX-FileCopyrightText: © 2022 Serhii “GooRoo” Olendarenko
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "mkdocs-obsidian-bridge"
version = "1.3.1"
description = "An MkDocs plugin that helps exporting your Obsidian vault as an MkDocs site."
authors = [{ name = "GooRoo", email = "sergey.olendarenko@gmail.com" }]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Plugins",
	"Framework :: MkDocs",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Topic :: Documentation",
	"Topic :: Software Development :: Documentation",
	"Topic :: Text Processing :: Markup :: HTML",
	"Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
	"mkdocs >=1.4.2",
	"markdown >=3.2.1",
	"obsidian-callouts>=1.0.0",
	"obsidian-media>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/GooRoo/mkdocs-obsidian-bridge"
Issues = "https://github.com/GooRoo/mkdocs-obsidian-bridge/issues"
Repository = "https://github.com/GooRoo/mkdocs-obsidian-bridge.git"

[project.entry-points."mkdocs.plugins"]
obsidian-bridge = "mkdocs_obsidian_bridge.plugin:ObsidianBridgePlugin"

[tool.uv]
dev-dependencies = [
	"yapf >=0.32.0",
	"pylama[pylint,toml] >=8.4.1",
	"ipykernel >=6.19.4",
	"pytest >=7.0.0",
	"mkdocs-test>=0.5.6",
	"super-collections>=0.5.3",
	"rich>=14.1.0",
]

[tool.uv.sources]
# obsidian-media = { path = "../obsidian-media", editable = true }
# obsidian-callouts = { path = "../obsidian-callouts", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
	".gitignore",
	".github/workflows/*",
	".justfile",
	"tests/*",
]

[tool.pylama]
max_line_length = 120

[tool.yapf]
blank_line_before_nested_class_or_def = false
blank_lines_between_top_level_imports_and_variables = 2
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
spaces_around_power_operator = true
spaces_before_comment = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
	"-p", "no:pylama",
	"--verbose",
	"--tb=short",
	"--strict-markers",
	"--strict-config",
	"--disable-warnings",
]
markers = [
	"slow: marks tests as slow (deselect with '-m \"not slow\"')",
	"integration: marks tests as integration tests",
]
